--- a/CpuBenchmark/CpuBenchmark.csproj
+++ b/CpuBenchmark/CpuBenchmark.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="OpenHardwareMonitor.Core" Version="0.8.0.5" />
+    <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="System.Management" Version="7.0.0" />
   </ItemGroup>
 
